--- a/about.html
+++ b/about.html
@@ -8,10 +8,9 @@
     <h2>It is nice to meet you</h2>
   </body>
   <img
-    src="img/Android-Logo-2008.png"
-    alt="This is android"
+    src="img/chowkuiheng.jpeg"
+    alt="My name is Chow Kui Heng"
     width="300"
     height="300"
   />
-  <a href="about.html">About</a>
 </html>
