--- a/week3/index.html
+++ b/week3/index.html
@@ -119,7 +119,7 @@
 <div class="px-4 py-5 my-5 text-center">
   <img
     class="d-block mx-auto mb-4"
-    src="/img/addidaslogo.png"
+    src="/week3/img/addidaslogo.png"
     alt=""
     width="300"
     height="300"
