--- a/week3/index.html
+++ b/week3/index.html
@@ -118,10 +118,10 @@
 <div class="b-example-divider"></div>
 <div class="px-4 py-5 my-5 text-center">
   <img
-    class="d-block mx-auto mb-4"
-    src="/week3/img/addidaslogo.png"
-    alt=""
-    width="300"
-    height="300"
-  />
+          class="d-block mx-auto mb-4"
+          src="img/addidaslogo.png"
+          alt=""
+          width="300"
+          height="300"
+        />
     </div>
