--- a/week3/index.html
+++ b/week3/index.html
@@ -46,10 +46,10 @@
           </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <a href="https://www.facebook.com/kuihengchow/" target="_new">
-              <img class="d-block mx-auto mb-4" src="/img/facebooklogo.png" alt="" width="60" />
+              <img class="d-block mx-auto mb-4" src="/week3/img/facebooklogo.png" alt="" width="60" />
             </a>
             <a href="https://www.instagram.com/jackiechow6867/" target="_new">
-              <img class="d-block mx-auto mb-4" src="/img/instagram_logo.jpg" alt="" width="110" />
+              <img class="d-block mx-auto mb-4" src="/week3/img/instagram_logo.jpg" alt="" width="110" />
             </a>
           </div>
         </div>
