--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 		<h1>Android</h1>
 	
         <img src="/week3/img/Android-Logo-2008.png" alt="This is android logo" width="200" height="200">
-        <a href="https://ChowKuiHeng.github.io/index.html"><br> Index Page</a>
+        <a href="index.html"><br> Index Page</a>
 
 	</body>
 </html>
