--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 		<h1>Chow Kui Heng</h1>
 	
         <img src="/week3/img/chowkuiheng.jpeg" alt="I am Chow Kui Heng" width="100" height="100">
-        <a href="https://ChowKuiHeng.github.io/about.html"><br> Home Page</a>
+        <a href="home.html"><br> Home Page</a>
 	</body>
 </html>
