--- a/week4/box_model1.html
+++ b/week4/box_model1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Box Model 1</title>
-    <link rel="stylesheet" type="text/css" href="/week 4/css_file/box_model1_style.css" />
+    <link rel="stylesheet" type="text/css" href="/week4/css_file/box_model1_style.css" />
   </head>
 
   <body>
