--- a/week4/homework/homework1.html
+++ b/week4/homework/homework1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Homework 1</title>
+    <title>Homework1</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -24,7 +24,7 @@
         </h1>
         <p id="p">Furniture, decor and beyond</p>
       </div>
-      <div id="example2"><img src="/week4/img/picture_homework 1.png" /></div>
+      <div id="example2"><img src="/week4/img/picture_homework_1.png" /></div>
     </div>
   </body>
 </html>
