on going homework4

--- a/week4/homework/homework4.html
+++ b/week4/homework/homework4.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Homework 4</title>
+    <title>Homework4</title>
     <link
       rel="stylesheet"
       type="text/css"
       href="/week4/css_file/homework4.css"
     />
-    <link rel="stylesheet" type="text/css" href="../css folder/homework4.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,18 +18,19 @@
   <body>
     <div class="container">
       <div id="example1">
-        <h1 id="h1">Who We Are</h1>
+        <h1>Who We Are</h1>
         <p>
           Mintmade Online offers a well-curated range of fashion items for men
           and women.
         </p>
-        <br />
         <p>
           We aim to provide an enjoyable shopping experience for all our
           customers.
         </p>
       </div>
-      <div id="example2"><img src="/week4/img/picture_homework_4.png" /></div>
+      <div id="example2">
+        <img src="/week4/img/picture_homework_4.png" />
+      </div>
     </div>
   </body>
 </html>
