--- a/week4/homework/homework4.html
+++ b/week4/homework/homework4.html
@@ -7,25 +7,24 @@
       type="text/css"
       href="/week4/css_file/homework4.css"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display:wght@600&display=swap"
-      rel="stylesheet"
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Slabo+27px&display=swap" rel="stylesheet"
     />
   </head>
 
   <body>
     <div class="container">
       <div id="example1">
-        <h1>Who We Are</h1>
+        <h1>Who <em>We</em> Are</h1>
         <p>
-          Mintmade Online offers a well-curated range of fashion items for men
-          and women.
+          Mintmade Online offers a well-curated 
+          <br>range of fashion items for men and 
+          <br>women.
         </p>
         <p>
-          We aim to provide an enjoyable shopping experience for all our
-          customers.
+          We aim to provide an enjoyable shopping 
+          <br>experience for all our customers.
         </p>
       </div>
       <div id="example2">
