--- a/week4/homework/homework5.html
+++ b/week4/homework/homework5.html
@@ -7,42 +7,56 @@
       type="text/css"
       href="/week4/css_file/homework5.css"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
-      href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@700&family=Poppins:wght@700&family=Questrial&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Slabo+27px&display=swap"
       rel="stylesheet"
     />
   </head>
 
   <body>
-    <div id="heading1">
-      <h1 id="h1">Mintmade in the News</h1>
-    </div>
-
-    <div class="container">
-      <div id="picture1"></div>
-      <div id="picture2"></div>
-      <div id="picture3"></div>
-    </div>
-
-    <div class="container_text">
+    <div class="container1">
+      <div id="example1">
+        <h1 id="h1">Mintmade
+          <br>in the<em> News</em></h1>
+      </div>
       <div id="text1">
-        <h2 id="h2">Araico Asian launch</h2>
+        <img src="/week4/img/picture_homework5.png">
+        <h2>Araico Asian<br>launch</h2>
         <p>
-          News write-ups offer a great way to let clients know about new products and services, events, awards and more! 
+          News write-ups offer a great
+          <br>way to let clients know
+          <br>about new
+          products and
+          <br>services, events, awards and 
+          <br>more!
         </p>
       </div>
-      <div id="text2">
-        <h2 id="h3">Clothing Drive 2020</h2>
+
+      <div id="text1">
+        <img src="/week4/img/picture_homework5.1.png">
+        <h2>Clothing Drive<br>2020</h2>
         <p>
-            News write-ups offer a great way to let clients know about new products and services, events, awards and more!
+          News write-ups offer a great
+          <br>way to let clients know
+          <br>about new
+          products and
+          <br>services, events, awards and 
+          <br>more!
         </p>
       </div>
-      <div id="text3">
-        <h2 id="h4">F/W 2020 Sneak Peek</h2>
+
+      <div id="text1">
+        <img src="/week4/img/picture_homework5.2.png">
+        <h2>F/W 2020 Sneak<br>Peek</h2>
         <p>
-          News write-ups offer a great way to let clients know about new products and services, events, awards and more!
+          News write-ups offer a great
+          <br>way to let clients know about
+          <br>new
+          products and services,
+          <br>events, awards and more!<br><br>
         </p>
       </div>
     </div>
