--- a/week4/homework/homework5.html
+++ b/week4/homework/homework5.html
@@ -8,8 +8,8 @@
       href="/week4/css_file/homework5.css"
     />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Slabo+27px&display=swap"
       rel="stylesheet"
@@ -19,43 +19,34 @@
   <body>
     <div class="container1">
       <div id="example1">
-        <h1 id="h1">Mintmade
-          <br>in the<em> News</em></h1>
+        <h1 id="h1">Mintmade<br>in the<em> News</em></h1>
       </div>
       <div id="text1">
-        <img src="/week4/img/picture_homework5.png">
+        <img src="/week4/img/picture_homework5.png" />
         <h2>Araico Asian<br>launch</h2>
         <p>
           News write-ups offer a great
-          <br>way to let clients know
-          <br>about new
-          products and
-          <br>services, events, awards and 
-          <br>more!
+          <br>way to let clients know <br>about new products and
+          <br>services, events, awards and <br />more!
         </p>
       </div>
 
       <div id="text1">
-        <img src="/week4/img/picture_homework5.1.png">
+        <img src="/week4/img/picture_homework5.1.png" />
         <h2>Clothing Drive<br>2020</h2>
         <p>
           News write-ups offer a great
-          <br>way to let clients know
-          <br>about new
-          products and
-          <br>services, events, awards and 
-          <br>more!
+          <br>way to let clients know <br>about new products and
+          <br>services, events, awards and <br>more!
         </p>
       </div>
 
       <div id="text1">
-        <img src="/week4/img/picture_homework5.2.png">
-        <h2>F/W 2020 Sneak<br>Peek</h2>
+        <img src="/week4/img/picture_homework5.2.png" />
+        <h2>F/W 2020 Sneak<br />Peek</h2>
         <p>
           News write-ups offer a great
-          <br>way to let clients know about
-          <br>new
-          products and services,
+          <br>way to let clients know about <br>new products and services,
           <br>events, awards and more!<br><br>
         </p>
       </div>
