changing png to jpg

--- a/home.html
+++ b/home.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Home page</title>
-	</head>
-	<body>
-		<h1>Android</h1>
-	
-        <img src="/week3/img/Android-Logo-2008.png" alt="This is android logo" width="130" height="130">
-        <a href="index.html"><br> Index Page</a>
+  <head>
+    <title>Home page</title>
+  </head>
+  <body>
+    <h1>Android</h1>
 
-	</body>
+    <img
+      src="/week3/img/android_logo_2008.png"
+      alt="This is android logo"
+      width="130"
+      height="130"
+    />
+    <a href="index.html"
+      ><br />
+      Index Page</a
+    >
+  </body>
 </html>
