--- a/week4/homework/homework1.html
+++ b/week4/homework/homework1.html
@@ -24,7 +24,7 @@
         </h1>
         <p id="p">Furniture, decor and beyond</p>
       </div>
-      <div id="example2"><img src="/week4/img/picture_homework1.png" /></div>
+      <div id="example2"><img src="/week4/img/picturehomework1.jpg" width="700px"/></div>
     </div>
   </body>
 </html>
