--- a/week4/homework/homework4.html
+++ b/week4/homework/homework4.html
@@ -24,11 +24,11 @@
         </p>
         <p>
           We aim to provide an enjoyable shopping 
-          <br>experience for all our customers.
+          experience for all our customers.
         </p>
       </div>
       <div id="example2">
-        <img src="/week4/img/picture_homework4.png" />
+        <img src="/week4/img/picturehomework4.jpg" width="450px" />
       </div>
     </div>
   </body>
