--- a/week4/homework/homework5.html
+++ b/week4/homework/homework5.html
@@ -22,7 +22,7 @@
         <h1 id="h1">Mintmade<br />in the<em> News</em></h1>
       </div>
       <div id="text1">
-        <img src="/week4/img/picture_homework5.png" />
+        <img src="/week4/img/picturehomework5.jpg" />
         <h2>Araico Asian<br />launch</h2>
         <p>
           News write-ups offer a great
@@ -32,7 +32,7 @@
       </div>
 
       <div id="text1">
-        <img src="/week4/img/picture_homework5.1.png" />
+        <img src="/week4/img/picturehomework5.1.jpg" />
         <h2>Clothing Drive<br />2020</h2>
         <p>
           News write-ups offer a great
@@ -42,7 +42,7 @@
       </div>
 
       <div id="text1">
-        <img src="/week4/img/picture_homework5.2.png" />
+        <img src="/week4/img/picturehomework5.2.jpg" />
         <h2>F/W 2020 Sneak<br />Peek</h2>
         <p>
           News write-ups offer a great
