delete the homework folder fot week 4

--- a/week5/index.html
+++ b/week5/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Container</title>
+    <title>Homework1</title>
     <link rel="stylesheet" type="text/css" href="cssfile/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
@@ -18,7 +18,6 @@
           <a href="#">Link 3</a>
         </div>
         <div id="menu">
-          <a>Menu</a>
           <a href="https://www.facebook.com/kuihengchow/" target="_new">
             <img src="img/facebooklogo.png" width="25px" />
           </a>
@@ -29,24 +28,43 @@
       </div>
       <div class="row">
         <div class="column">
-          <h2>Column</h2>
+          <h2>Side</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
-            sit amet pretium urna.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit...
           </p>
         </div>
-        <div class="column" id="”column1”">
-          <h2>Column</h2>
+        <div class="column" id="column1">
+          <h2>Main Content</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
-            sit amet pretium urna.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>Maecenas sit amet pretium urna. Vivamus venenatis velit<br>nec neque ultricies, eget elementum magna tristique.<br>Quisque vehicla, risus eget aliquam placerat, purus leo trincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis
           </p>
         </div>
         <div class="column">
-          <h2>Column</h2>
+          <h2>Side</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
-            sit amet pretium urna.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit...
+          </p>
+        </div>
+      </div>
+      <div class="row1">
+        <div class="column2">
+          <h2>Side</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit...
+          </p>
+        </div>
+        <div class="column2">
+          <h2>Side</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit...
+          </p>
+        </div>
+      </div>
+      <div class="row2">
+        <div class="column3">
+          <div id ="h2"><h2>Side</h2></div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit...
           </p>
         </div>
       </div>
