on going week 5 homework

--- a/week5/index.html
+++ b/week5/index.html
@@ -29,44 +29,45 @@
       <div class="row">
         <div class="column">
           <h2>Side</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit...
-          </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
         </div>
         <div class="column" id="column1">
           <h2>Main Content</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>Maecenas sit amet pretium urna. Vivamus venenatis velit<br>nec neque ultricies, eget elementum magna tristique.<br>Quisque vehicla, risus eget aliquam placerat, purus leo trincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br />Maecenas
+            sit amet pretium urna. Vivamus venenatis velit<br />nec neque
+            ultricies, eget elementum magna tristique.<br />Quisque vehicla,
+            risus eget aliquam placerat, purus leo trincidunt eros, eget luctus
+            quam orci in velit. Praesent scelerisque tortor sed accumsan
+            convallis
           </p>
         </div>
         <div class="column">
           <h2>Side</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit...
-          </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
         </div>
       </div>
       <div class="row1">
         <div class="column2">
           <h2>Side</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit...
-          </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
         </div>
         <div class="column2">
           <h2>Side</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit...
-          </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
         </div>
       </div>
       <div class="row2">
         <div class="column3">
-          <div id ="h2"><h2>Side</h2></div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit...
-          </p>
+          <div id="h2"><h2>Side</h2></div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
         </div>
+      </div>
+      <div class="footer">
+        <p id="footer1">Footer</p>
+        <p id="footer1">Footer</p>
+        <p id="footer1">Footer</p>
+        <p id="footer1">Footer</p>
       </div>
     </div>
   </body>
