rename the picture

--- a/week4/homework3.html
+++ b/week4/homework3.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <div id="pic">
-        <img src="/week4/img/picturehomework3.jpg" alt="pic" />
+        <img src="img/computerwithglass3.jpg" alt="pic" />
       </div>
       <div id="box1">
         <h1>CONNECT WITH US</h1>
