add images and code for homework 1 and 2

--- a/week5/homework3.html
+++ b/week5/homework3.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Homework2</title>
-    <link rel="stylesheet" type="text/css" href="cssfile/homework2.css" />
+    <title>Homework3</title>
+    <link rel="stylesheet" type="text/css" href="cssfile/homework3.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
@@ -11,19 +11,32 @@
         <img src="img/logoinstagram.png" width="100px" />
         <div class="phonetext">
           <h4 id="phone">019-948 6867</h4>
-
-          <div class="topnav">
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Contact Us</a>
-          </div>
         </div>
       </div>
+    </div>
+    <div class="topnav">
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Contact Us</a>
     </div>
     <div class="slideshow">
       <img class="slide" src="img/moutain.jpg" width="100%" height="300px" />
       <img class="slide" src="img/snowforest.jpg" width="100%" height="300px" />
       <img class="slide" src="img/forest.jpg" width="100%" height="300px" />
+    </div>
+    <div class="row">
+      <div>
+        <h4>FEAT1</h4>
+      </div>
+      <div>
+        <h4>FEAT2</h4>
+      </div>
+      <div>
+        <h4>FEAT3</h4>
+      </div>
+      <div>
+        <h4>FEAT4</h4>
+      </div>
     </div>
     <script>
       var slideIndex = 0;
