--- a/week5/index.html
+++ b/week5/index.html
@@ -64,10 +64,10 @@
         </div>
       </div>
       <div class="footer">
-        <p id="footer1">Footer</p>
-        <p id="footer1">Footer</p>
-        <p id="footer1">Footer</p>
-        <p id="footer1">Footer</p>
+        <h2 >Footer</h2>
+        <h2 >Footer</h2>
+        <h2 >Footer</h2>
+        <h2 >Footer</h2>
       </div>
     </div>
   </body>
