adding a new folder,modified the code and picture

--- a/index.html
+++ b/index.html
@@ -1,12 +1,167 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Index page</title>
-	</head>
-	<body>
-		<h1>Chow Kui Heng</h1>
-	
-        <img src="/week3/img/chowkuiheng.jpeg" alt="I am Chow Kui Heng" width="110" height="110">
-        <a href="home.html"><br> Home Page</a>
-	</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Homework4</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="cssfile/bootstrap.min.css" rel="stylesheet" />
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
+    <!-- Custom styles for this template -->
+    <link href="cssfile/heroes.css" rel="stylesheet" />
+  </head>
+  <body>
+    <main>
+      <h1 class="visually-hidden">Heroes examples</h1>
+
+      <div class="px-4 py-5 my-5 text-center">
+        <img
+          class="d-block mx-auto mb-4"
+          src="img/addidaslogo.png"
+          alt=""
+          width="300"
+          height="300"
+        />
+        <h1 class="display-5 fw-bold">Chow Kui Heng</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="lead mb-4">
+            大家好，我是邹贵恒，我今年20岁来自吉兰丹。我喜欢打篮球和玩魔术方块。我最喜爱的篮球运动员是勒布朗·詹姆斯。我会玩3x3魔方和五魔方
+          </p>
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <a href="https://www.facebook.com/kuihengchow/" target="_new">
+              <img
+                class="d-block mx-auto mb-4"
+                src="img/facebooklogo1.png"
+                alt=""
+                width="60"
+              />
+            </a>
+            <a href="https://www.instagram.com/jackiechow6867/" target="_new">
+              <img
+                class="d-block mx-auto mb-4"
+                src="img/instagram_logo.jpg"
+                alt=""
+                width="110"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="b-example-divider"></div>
+      <div class="container my-5">
+        <div
+          class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg"
+        >
+          <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+            <h1 class="display-4 fw-bold lh-1">Weekly Homework</h1>
+            <h2>Homework week3</h2>
+            <ul>
+              <a
+                href="https://ChowKuiHeng.github.io/week3/index.html"
+                target="__homeworkweek3"
+              >
+                <li>Homework1</li>
+              </a>
+              <a href="https://ChowKuiHeng.github.io/home.html" target="__home">
+                <li>home.html</li>
+              </a>
+
+              <a
+                href="https://ChowKuiHeng.github.io/index.html"
+                target="__index"
+              >
+                <li>index.html</li>
+              </a>
+            </ul>
+            <h2>Homework week4</h2>
+            <ul>
+              <a
+                href="https://ChowKuiHeng.github.io/week4/boxmodel1.html"
+                target="__boxmodel1"
+              >
+                <li>box_model1</li>
+              </a>
+              <a
+                href="https://ChowKuiHeng.github.io/week4/boxmodel2.html"
+                target="_boxmodel2"
+              >
+                <li>box_model2</li>
+              </a>
+              <a
+                href="https://ChowKuiHeng.github.io/week4/homework1.html"
+                target="__homeworkl"
+              >
+                <li>Homework1</li>
+              </a>
+              <a
+                href="https://ChowKuiHeng.github.io/week4/homework2.html"
+                target="__homework2"
+              >
+                <li>Homework2</li>
+              </a>
+              <a
+                href="https://ChowKuiHeng.github.io/week4/homework3.html"
+                target="__homework3"
+              >
+                <li>Homework3</li>
+              </a>
+              <a
+                href="https://ChowKuiHeng.github.io/week4/homework4.html"
+                target="__homework4"
+              >
+                <li>Homework4</li>
+              </a>
+              <a
+                href="https://ChowKuiHeng.github.io/week4/homework5.html"
+                target="__homework5"
+              >
+                <li>Homework5</li>
+              </a>
+            </ul>
+            <h2>Homework week5</h2>
+            <ul>
+              <a
+                href="https://ChowKuiHeng.github.io/week5/index.html"
+                target="__index"
+              >
+                <li>index.html</li>
+              </a>
+              <a
+                href="https://ChowKuiHeng.github.io/week5/homework2.html"
+                target="__homework2"
+              >
+                <li>Homework2</li>
+              </a>
+              <a
+                href="https://ChowKuiHeng.github.io/week5/homework3.html"
+                target="__homework3"
+              >
+                <li>Homework3</li>
+              </a>
+            </ul>
+          </div>
+          <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+            <img class="rounded-lg-3" src="img/chowkuiheng.jpeg" width="360" />
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
