add a about html file

--- a/home.html
+++ b/home.html
@@ -12,9 +12,9 @@
       width="130"
       height="130"
     />
-    <a href="index.html"
+    <a href="about.html"
       ><br />
-      Index Page</a
+      About Page</a
     >
   </body>
 </html>
