delete index html and add a new one

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
               </a>
 
               <a
-                href="https://ChowKuiHeng.github.io/index.html"
-                target="__index"
+                href="https://chowkuiheng.github.io/about.html"
+                target="__about"
               >
-                <li>index.html</li>
+                <li>about.html</li>
               </a>
             </ul>
             <h2>Homework week4</h2>
