delete the space of boxmodel

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
                 href="https://ChowKuiHeng.github.io/week4/boxmodel1.html"
                 target="__boxmodel1"
               >
-                <li>box_model1</li>
+                <li>boxmodel1</li>
               </a>
               <a
                 href="https://ChowKuiHeng.github.io/week4/boxmodel2.html"
                 target="_boxmodel2"
               >
-                <li>box_model2</li>
+                <li>boxmodel2</li>
               </a>
               <a
                 href="https://ChowKuiHeng.github.io/week4/homework1.html"
