--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
           class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg"
         >
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <h1 class="display-4 fw-bold lh-1">Weekly Homework</h1>
-            <h2>Homework week3</h2>
+            <h2>Homework Week3</h2>
             <ul>
               <a
                 href="https://ChowKuiHeng.github.io/week3/index.html"
@@ -90,7 +89,7 @@
                 <li>about.html</li>
               </a>
             </ul>
-            <h2>Homework week4</h2>
+            <h2>Homework Week4</h2>
             <ul>
               <a
                 href="https://ChowKuiHeng.github.io/week4/boxmodel1.html"
@@ -135,7 +134,7 @@
                 <li>Homework5</li>
               </a>
             </ul>
-            <h2>Homework week5</h2>
+            <h2>Homework Week5</h2>
             <ul>
               <a
                 href="https://ChowKuiHeng.github.io/week5/index.html"
