adding code for exercise 1 and 2

--- a/week6/exercise1.html
+++ b/week6/exercise1.html
@@ -20,7 +20,9 @@
       </div>
     </div>
     <div class="container1">
-      <img src="img/mobilephoto.jpg" width="1024px" height="512px" />
+      <div id="image">
+        <img src="img/mobilephoto.jpg" width="1024px" height="512px" />
+      </div>
       <div class="center">AMAZING PLACES IN AMERICA TO VISIT</div>
       <div class="bottomleft">
         <img src="img/chowkuiheng.jpeg" width="40px" height="40px" />
@@ -34,12 +36,10 @@
       </div>
     </div>
     <div class="guildline">
-      <div class="travel">
-        <img src="img/earth.png" />
-        TRAVELGUIDE
-        <img src="img/note.png" />
-        WORLD_NEWS
-      </div>
+      <img src="img/earth.png" />
+      TRAVELGUIDE
+      <img src="img/note.png" />
+      WORLD_NEWS
     </div>
   </body>
 </html>
