--- a/week6/exercise2.html
+++ b/week6/exercise2.html
@@ -7,20 +7,48 @@
   </head>
   <body>
     <div class="grid-container">
-      <div class="item1"><img src="img/discordlogo.png" alt="" width="100px"></div>
-      <div class="item2">   <div class="phonetext">
-        <a href="#">HOME</a>
-        <a href="#">DISCOVERY</a>
-        <a href="#">PHOTOS</a>
-        <a href="#">CONTACT</a>
-      </div></div>
-      <div class="item3">Imageslideshow</div>
-      <div class="item4">Feat1</div>
-      <div class="item5">Feat2</div>
-      <div class="item6">Feat3</div>
-      <div class="item7">Sidebar</div>
-      <div class="item8">Textcontent</div>
-      <div class="item9">Footer</div>
+      <div class="item1">
+        <img src="img/logoinstagram.png" alt="" width="100px" />
+      </div>
+      <div class="item2">
+        <div class="topnav">
+          <a href="#">HOME</a>
+          <a href="#">DISCOVERY</a>
+          <a href="#">PHOTOS</a>
+          <a href="#">CONTACT</a>
+        </div>
+      </div>
+      <div class="item3">
+        <img src="img/mobilephoto.jpg" width="1024px" height="512px" />
+      </div>
+      <div class="item4">
+        <img src="img/earth.png" /> <a id="travel">TRAVELGUIDE</a>
+      </div>
+      <div class="item5">
+        <img src="img/note.png" /> <a id="travel"> WORLDNEWS </a>
+      </div>
+      <div class="item6">
+        <img src="img/phonecall.png" /> <a id="travel"> CONTACT</a>
+      </div>
+      <div class="item7">
+        <div class="topnav2">
+          <a href="#">HOME</a>
+          <a href="#">DISCOVERY</a>
+          <a href="#">PHOTOS</a>
+          <a href="#">CONTACT</a>
+        </div>
+      </div>
+      <div class="item8">
+        <div class="text">
+          <p1>NEXT STORY</p1><br />
+          Morbi eleifend a libero<br />
+          Quisque viverra interdum velit, et cursus magna<br />sagittis in. In
+          dui dui.
+        </div>
+      </div>
+      <div class="item9">
+        <div class="footer">This is footer</div>
+      </div>
     </div>
   </body>
 </html>
