adding the code and some png picture

--- a/week6/exercise1.html
+++ b/week6/exercise1.html
@@ -15,6 +15,9 @@
             <a href="#">DISCOVERY</a>
             <a href="#">PHOTOS</a>
             <a href="#">CONTACT</a>
+            <a href="https://www.facebook.com/kuihengchow/" target="_new">
+              <img src="img/facebooklogo.png" width="18px" height="18px" />
+            </a>
           </div>
         </div>
       </div>
@@ -33,6 +36,9 @@
         Morbi eleifend a libero<br />
         Quisque viverra interdum velit, et cursus magna<br />sagittis in. In dui
         dui.
+        <div class="arrow">
+          <img src="img/arrowright.png" height="10px" />
+        </div>
       </div>
     </div>
     <div class="guildline">
