correcting some class and add picture

--- a/week6/exercise2.html
+++ b/week6/exercise2.html
@@ -7,48 +7,45 @@
   </head>
   <body>
     <div class="grid-container">
-      <div class="item1">
-        <img src="img/logoinstagram.png" alt="" width="100px" />
+      <div class="logo">
+        <img src="img/addidaslogo.png" alt="" width="150px" />
       </div>
-      <div class="item2">
+      <div class="menu">
         <div class="topnav">
           <a href="#">HOME</a>
-          <a href="#">DISCOVERY</a>
-          <a href="#">PHOTOS</a>
           <a href="#">CONTACT</a>
+          <a href="#">ABOUT US</a>
         </div>
       </div>
-      <div class="item3">
-        <img src="img/mobilephoto.jpg" width="1024px" height="512px" />
+      <div class="img">
+        <img src="img/mobilephoto.jpg" width="90%" height="512px" />
       </div>
-      <div class="item4">
+      <div class="img1">
         <img src="img/earth.png" /> <a id="travel">TRAVELGUIDE</a>
       </div>
-      <div class="item5">
+      <div class="img2">
         <img src="img/note.png" /> <a id="travel"> WORLDNEWS </a>
       </div>
-      <div class="item6">
+      <div class="img3">
         <img src="img/phonecall.png" /> <a id="travel"> CONTACT</a>
       </div>
-      <div class="item7">
+      <div class="sidebar">
         <div class="topnav2">
           <a href="#">HOME</a>
-          <a href="#">DISCOVERY</a>
-          <a href="#">PHOTOS</a>
           <a href="#">CONTACT</a>
+          <a href="#">ABOUT US</a>
         </div>
       </div>
-      <div class="item8">
+      <div class="textcontent">
         <div class="text">
-          <p1>NEXT STORY</p1><br />
-          Morbi eleifend a libero<br />
-          Quisque viverra interdum velit, et cursus magna<br />sagittis in. In
-          dui dui.
+          <p1
+            >My name is Chow Kui Heng<br>I am 20 years old from Kelantan<br> I like
+            playing basketball<br> My favorite basketball
+            player is LeBron James</p1
+          >
         </div>
       </div>
-      <div class="item9">
-        <div class="footer">This is footer</div>
-      </div>
+      <div class="footer">Footer</div>
     </div>
   </body>
 </html>
