--- a/week6/homework1.html
+++ b/week6/homework1.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Homework1</title>
+    <title>Exercise1</title>
     <link rel="stylesheet" type="text/css" href="cssfile/homework1.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div class="main">
-      <div class="container1">
+      <div class="container">
         <div class="logo">
-          <img src="img/Group1539@2x.png" width="80px" height="85px" />
-          <h2 id="textlogo">Marketing</h2>
+          <img src="img/Group1539@2x.png" alt="" width="80px" height="85px" />
+          <h1 id="textlogo">Marketing</h1>
         </div>
         <div class="topnav">
           <a href="#">HOME</a>
@@ -18,7 +18,8 @@
           <a href="#">PRICES</a>
           <a href="#">CONTACT</a>
         </div>
-
+      </div>
+      <div class="container1">
         <div class="sidebar">
           <a href="#"><img src="img/003-facebook@2x.png" width="15px" /></a>
           <a href="#"><img src="img/002-google-plus@2x.png" width="15px" /></a>
@@ -27,29 +28,151 @@
           /></a>
           <a href="#"><img src="img/instagram@2x.png" width="15px" /></a>
         </div>
-        <div class="content">
-          <h2 id="title1">SOCIAL MEDIA</h2>
-          <h1 id="title2">FOR BUSINESS!</h1>
+        <div class="header">
+          <h2 id="headertext">SOCIAL MEDIA</h2>
+          <h1 id="headertext1">FOR BUSINESS!</h1>
           <div id="text1">
             PERFOMANCE BASED SOCIAL MEDIA AGENCY<br />WE ARE LOREM MEDIA
           </div>
-
           <div class="button1">
             <a id="btntext" href="#">GET A FREE AUDIT</a>
           </div>
         </div>
-        <div class="image1423">
+        <div class="logo1">
           <img id="group1423" src="img/Group1423@2x.png" width="550px" />
         </div>
+      </div>
+      <div class="mouse">
+        <a href="#">
+          <img id="btnmouse" src="img/mouse@2x.png" width="25px" height="65px"
+        /></a>
+      </div>
+      <div class="container2">
+        <div class="logo1">
+          <img src="img/seemore.png" width="600px" />
+        </div>
+        <div class="text1">
+          <div id="bio">Biography</div>
+          <h2 id="header">WHO WE ARE</h2>
+          <div id="text2">
+            Lorem Media is a full-service social media agency.We offer<br />
+            businesses innovative solutions that deliver that deliver the right
+            type of<br />audience to you in the most effective strategies
+            possible. We strive<br />
+            to develop a community around you business, polishing your<br />branding,
+            and improvinhg your public relations.<br />Social Media is now one
+            of the most powerful marketing tools with<br />
+            the ability to communicate with a target audience in real time.<br /><br />
+            It's 2019:time to sink or swim
+          </div>
+          <div class="seemore">
+            <a id="btnseemore" href="#">SEE MORE</a>
+          </div>
+        </div>
+      </div>
 
-        <div class="mouse">
-          <a href="#">
-            <img
-              id="btnmouse"
-              src="img/mouse@2x.png"
-              width="25px"
-              height="65px"
-          /></a>
+      <div class="container3">
+        <div id="service">OUR SERVICES</div>
+        <h2 id="header1">What We Offer</h2>
+        <div class="backimg">
+          <div class="mainservice">
+            <div class="box1">
+              <div class="allimg">
+                <img src="img/001-process@2x.png" width="50px" />
+              </div>
+              <h4 id="socialmedia">SOCIAL MEDIA MANAGEMENT</h4>
+              <p>
+                Perfect to growing your brand's social<br />community and engage
+                with the right<br />audience. We manage everything from curation
+                of content to management of
+              </p>
+              <div class="buttonsee1">
+                <a class="btnmore" href="#">SEE MORE</a>
+              </div>
+            </div>
+            <div class="box1">
+              <div class="allimg">
+                <img src="img/002-social-media@2x.png" width="50px" />
+              </div>
+              <h4 id="socialgrowth">SOCIAL GROWTH CAMPAIGN</h4>
+              <p>
+                Our social growth campaign will have your <br />
+                socials come alive.<br />With constant growth and engagement
+                you<br />
+                will be sure to have the thriving you've been<br />looking for.
+              </p>
+              <div class="buttonsee2">
+                <a class="btnmore" href="#">SEE MORE</a>
+              </div>
+            </div>
+            <div class="box1">
+              <div class="allimg">
+                <img src="img/003-responsive@2x.png" width="50px" />
+              </div>
+              <h4 id="branding">BRANDING & MEDIA</h4>
+              <p>
+                Done right, branding offers a company an<br />
+                edge over the competition. So what exactly is<br />
+                branding, and why is it important for<br />companies to
+                integrate a well-rounded<br />
+                branding and media strategy?
+              </p>
+              <div class="buttonsee3">
+                <a class="btnmore" href="#">SEE MORE</a>
+              </div>
+            </div>
+          </div>
+          <div class="mainservice1">
+            <div class="box1">
+              <div class="allimg">
+                <img src="img/007-analysis@2x.png" width="50px" />
+              </div>
+              <h4 id="influencer">INFLUENCER MARKETING</h4>
+              <p>
+                We will pair your business with influencers<br />that speak to
+                your audience. Influencer <br />Marketing is the most effective
+                way to reach<br />
+                a loyal audience.
+              </p>
+              <div class="buttonsee4">
+                <a class="btnmore" href="#">SEE MORE</a>
+              </div>
+            </div>
+            <div class="box1">
+              <div class="allimg">
+                <img src="img/004-social-media-1@2x.png" width="50px" />
+              </div>
+
+              <h4 id="socialmediapaid">SOCIAL MEDIA PAID ADVERTISING</h4>
+              <p>
+                Our ad campaigns will bring you the results<br />
+                your looking for. From brand awareness<br />
+                campaigns to lead funnels, we have got the <br />tools to create
+                the right ads for your business. <br />Our re-targeting
+                campaigns will be sure to get<br />your visitors coming back to
+                your site
+              </p>
+              <div class="buttonsee5">
+                <a class="btnmore" href="#">SEE MORE</a>
+              </div>
+            </div>
+            <div class="box1">
+              <div class="allimg">
+                <img src="img/008-computer@2x.png" width="50px" />
+              </div>
+              <h4 id="contentmarketing">CONTENT MARKETING SERVICES</h4>
+              <p>
+                We can create and provide your company with<br />
+                the best content marketing for your socials to<br />improve
+                online presence. Creating valuable<br />and quality content
+                helps boost conversions<br />
+                and improve customer retention.
+              </p>
+              <div class="buttonsee6">
+                <a class="btnmore" href="#">SEE MORE</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
