adding some css and html

--- a/week6/homework1.html
+++ b/week6/homework1.html
@@ -175,6 +175,56 @@
           </div>
         </div>
       </div>
+      <div class="backimg4">
+        <div class="container4">
+          <div id="pricing">Pricing</div>
+          <h2 id="ourpricing">Our Pricing</h2>
+          <div class="mainpricing">
+            <div class="box2">
+              <h4 class="headp">Gold Package</h4>
+              <p>
+                Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.
+                Aenean<br />
+                nisi nibh, sagittis ac faucibus sit
+              </p>
+              <div class="price">
+                <a class="btnprice">$ 140</a>
+              </div>
+              <div class="buttondetail1">
+                <button class="btndetails1" href="#">See Details</button>
+              </div>
+            </div>
+            <div class="box2">
+              <h4 class="headp">Platinum Package</h4>
+              <p>
+                Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.
+                Aenean<br />
+                nisi nibh, sagittis ac faucibus sit
+              </p>
+              <div class="price">
+                <a class="btnprice">$ 140</a>
+              </div>
+              <div class="buttondetail1">
+                <a class="btndetails" href="#">See Details</a>
+              </div>
+            </div>
+            <div class="box2">
+              <h4 class="headp">Silver Package</h4>
+              <p>
+                Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.
+                Aenean<br />
+                nisi nibh, sagittis ac faucibus sit
+              </p>
+              <div class="price">
+                <a class="btnprice">$ 140</a>
+              </div>
+              <div class="buttondetail1">
+                <button class="btndetails1" href="#">See Details</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
