adding png, html and css for container6

--- a/week6/homework1.html
+++ b/week6/homework1.html
@@ -225,6 +225,92 @@
           </div>
         </div>
       </div>
+      <div class="container5">
+        <div id="newsletter">Newsletter</div>
+        <h2 id="specialnews">Do you want to get Special News?</h2>
+        <div class="emailbar">
+          <div class="email">
+            <p>Drop Your Email</p>
+          </div>
+          <div class="button5">
+            <a id="btn5text" href="#">Subscribe</a>
+          </div>
+        </div>
+      </div>
+      <div class="imgcontainer6">
+        <div class="background1">
+          <img
+            src="img/Shapefooter1@2x.png"
+            alt=""
+            width="100%"
+            height="600px"
+          />
+        </div>
+        <div class="background2">
+          <img
+            src="img/Shapefooter2@2x.png"
+            alt=""
+            width="100%"
+            height="500px"
+          />
+        </div>
+        <div class="container6">
+          <div class="stayintouch">
+            <div id="logotext">logo.</div>
+            <h2 id="staytext">Stay in touch</h2>
+            <div class="footerlogo">
+              <a href="#"><img src="img/asset-1@2x.png" width="10px" /></a>
+              <a href="#"><img src="img/asset-3@2x.png" width="20px" /></a>
+              <a href="#"><img src="img/asset-2@2x.png" width="20px" /></a>
+              <a href="#"><img src="img/instagram-1@2x.png" width="20px" /></a>
+            </div>
+          </div>
+          <div class="quicklinks">
+            <div id="headerquick">Quick Links</div>
+            <div class="boxfooter">
+              <p class="quick" href="#">About</p>
+              <p class="quick" href="#">Home</p>
+              <p class="quick" href="#">Pricing</p>
+              <p class="quick" href="#">Location</p>
+              <p class="quick" href="#">Office</p>
+            </div>
+          </div>
+          <div class="hours">
+            <div id="headerhour">Hours</div>
+            <div class="boxfooter">
+              <p class="week" href="#">
+                Monday:&nbsp; &nbsp; &nbsp; 9:00-18:00
+              </p>
+              <p class="week" href="#">
+                Tuesday:&nbsp; &nbsp; &nbsp;9:00-18:00
+              </p>
+              <p class="week" href="#">Wednesday:&nbsp;9:00-18:00</p>
+              <p class="week" href="#">Thursday:&nbsp; &nbsp; 9:00-18:00</p>
+              <p class="week" href="#">
+                Friday:&nbsp; &nbsp; &nbsp; &nbsp; 9:00-18:00
+              </p>
+            </div>
+          </div>
+          <div class="contact">
+            <div id="headercontact">Contact</div>
+            <div class="boxfooter">
+              <div class="contactfooter">
+                <div class="word">
+                  <img src="img/old-handphone@2x.png" width="15px" />
+                  000-000-0000
+                </div>
+                <div class="word">
+                  <img src="img/envelope@2x.png" width="15px" /> info@email.com
+                </div>
+                <div class="word">
+                  <img src="img/maps-and-flags@2x.png" width="13px" /> New York,
+                  US
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
