change the css for container4

--- a/week6/homework1.html
+++ b/week6/homework1.html
@@ -191,7 +191,7 @@
                 <a class="btnprice">$ 140</a>
               </div>
               <div class="buttondetail1">
-                <button class="btndetails1" href="#">See Details</button>
+                <a class="btndetails1" href="#">See Details</a>
               </div>
             </div>
             <div class="box2">
@@ -219,7 +219,7 @@
                 <a class="btnprice">$ 140</a>
               </div>
               <div class="buttondetail1">
-                <button class="btndetails1" href="#">See Details</button>
+                <a class="btndetails1" href="#">See Details</a>
               </div>
             </div>
           </div>
