changing the title

--- a/week6/homework1.html
+++ b/week6/homework1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Exercise1</title>
+    <title>Homework1</title>
     <link rel="stylesheet" type="text/css" href="cssfile/homework1.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
