adding color on text

--- a/week6/homework1.html
+++ b/week6/homework1.html
@@ -227,7 +227,7 @@
       </div>
       <div class="container5">
         <div id="newsletter">Newsletter</div>
-        <h2 id="specialnews">Do you want to get Special News?</h2>
+        <p id="specialnews">Do you want to get <strong>Special News?</strong> </p>
         <div class="emailbar">
           <div class="email">
             <p>Drop Your Email</p>
