change the title for index html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Homework4</title>
+    <title>Chow Kui Heng</title>
 
     <!-- Bootstrap core CSS -->
     <link href="cssfile/bootstrap.min.css" rel="stylesheet" />
