upload the homework1 for week 6

--- a/index.html
+++ b/index.html
@@ -155,6 +155,27 @@
                 <li>Homework3</li>
               </a>
             </ul>
+            <h2>Homework Week6</h2>
+            <ul>
+              <a
+                href="https://chowkuiheng.github.io/week6/exercise1.html"
+                target="__exercise1"
+              >
+                <li>exercise1</li>
+              </a>
+              <a
+                href="https://chowkuiheng.github.io/week6/exercise2.html"
+                target="__exercise2"
+              >
+                <li>exercise2</li>
+              </a>
+              <a
+                href="https://chowkuiheng.github.io/week6/homework1.html"
+                target="__homework1"
+              >
+                <li>Homework1</li>
+              </a>
+            </ul>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
             <img class="rounded-lg-3" src="img/chowkuiheng.jpeg" width="360" />
