--- a/week7/exercise3.html
+++ b/week7/exercise3.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Exercise1</title>
-    <link rel="stylesheet" type="text/css" href="cssfile/form.css" />
+    <link rel="stylesheet" type="text/css" href="cssfile/exercise3.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
