adding week7 exercise

--- a/index.html
+++ b/index.html
@@ -161,19 +161,40 @@
                 href="https://chowkuiheng.github.io/week6/exercise1.html"
                 target="__exercise1"
               >
-                <li>exercise1</li>
+                <li>Exercise1</li>
               </a>
               <a
                 href="https://chowkuiheng.github.io/week6/exercise2.html"
                 target="__exercise2"
               >
-                <li>exercise2</li>
+                <li>Exercise2</li>
               </a>
               <a
                 href="https://chowkuiheng.github.io/week6/homework1.html"
                 target="__homework1"
               >
                 <li>Homework1</li>
+              </a>
+            </ul>
+            <h2>Homework Week7</h2>
+            <ul>
+              <a
+                href="https://chowkuiheng.github.io/week7/exercise1.html"
+                target="__exercise1"
+              >
+                <li>Exercise1</li>
+              </a>
+              <a
+                href="https://chowkuiheng.github.io/week7/exercise2.html"
+                target="__exercise2"
+              >
+                <li>Exercise2</li>
+              </a>
+              <a
+                href="https://chowkuiheng.github.io/week7/exercise3.html"
+                target="__exercise3"
+              >
+                <li>Exercise3</li>
               </a>
             </ul>
           </div>
