change jpg name

--- a/week8/assignment1.html
+++ b/week8/assignment1.html
@@ -124,7 +124,7 @@
         />
         <img
           class="guamusang2"
-          src="img/guamusang2.jpg"
+          src="img/gua_musang2.jpg"
           width="325px"
           height="638px"
         />
